--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gemanepa-react-redux-counter",
+  "author": "gemanepa",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
